@@ -119,8 +119,7 @@ critic_config = .perlcriticrc     ; relative to project root
 trailing_whitespace = 1
 [Test::UnusedVars]      ; xt/release/unused-vars.t - a standard Test::Vars test
 
-;  Doesn't work because Pod::Weaver places pod after __END__
-; [Test::Synopsis]        ; xt/release/synopsis.t
+[Test::Synopsis]        ; xt/release/synopsis.t
 [Test::Pod::LinkCheck]  ; xt/release/pod-linkcheck.t - a standard Test::Pod::LinkCheck test
 
 [RunExtraTests]         ; run xt/-tests
